--- a/src/components/CategoryItem/CategoryItem.module.css
+++ b/src/components/CategoryItem/CategoryItem.module.css
@@ -1,42 +1,56 @@
 .category-item {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: flex-end;
-  position: relative;
-  padding: var(--padding-content);
+  align-items: center;
+  /* padding: var(--padding-content); */
   padding-bottom: 0;
-  flex-grow: 1;
-  width: 50%;
+  max-width: 50rem;
   text-align: center;
-  min-height: 500px;
+  max-height: 50rem;
+  border-radius: 6px;
   overflow: hidden;
   cursor: pointer;
 }
 
 .title {
-  width: 100%;
   color: var(--white);
   font-size: 5rem;
-  background-color: rgba(0, 0, 0, 1);
   padding: 0.2rem 4rem;
+  position: absolute;
+  text-transform: uppercase;
+  font-weight: var(--bold);
+  text-shadow: 1px 2px 2px var(--black);
+  transition: color 0.6s ease-out;
 }
 
 .category-image {
+  max-width: 45rem;
+  max-height: 45rem;
+  object-fit: contain;
+  transition: transform 0.6s ease-out;
+}
+
+.overlay {
   position: absolute;
-  max-width: 100%;
-  height: 100%;
-  z-index: -1;
   top: 0;
-  right: 0;
-  transition: transform 0.9s ease-out;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.65);
+  transition: background-color 0.6s ease-out;
 }
 
 .category-item:hover img {
-  transform: scale(1.1);
+  transform: scale(1.2);
+}
+
+.category-item:hover .overlay {
+  background-color: transparent;
 }
 
 .category-item:hover .title {
-  background-color: rgba(0, 0, 0, 0.2);
-  color: var(--black);
+  color: transparent;
+  text-shadow: none;
 }
