--- a/src/pages/Shop/Shop.module.css
+++ b/src/pages/Shop/Shop.module.css
@@ -1,16 +1,11 @@
 .shop-list-container {
-  width: 75%;
+  max-width: 100rem;
   margin: 3rem auto;
-  border: 1px solid black;
-  display: flex;
-  /* flex-wrap: wrap; */
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  column-gap: 1rem;
+  row-gap: 4rem;
   align-items: center;
-}
-
-.category-item {
-  padding: var(--padding-content);
-  flex-grow: 1;
-  min-width: 25rem;
-  background-color: grey;
-  text-align: center;
+  justify-items: center;
 }
