changed white color variable

--- a/src/App.css
+++ b/src/App.css
@@ -127,7 +127,7 @@ table {
 :root {
   --main-blue: #00205b;
   --accent: #546289;
-  --white: #e8d9d8;
+  --white: #e6e6e6;
   --black: #161319;
 
   --font: 'Saira Condensed', sans-serif;
