--- a/src/components/ProductListItem/ProductListItem.module.css
+++ b/src/components/ProductListItem/ProductListItem.module.css
@@ -5,6 +5,7 @@
   border-radius: 6px;
   text-align: center;
   box-shadow: 0px 5px 12px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
 .product-info {
@@ -31,7 +32,8 @@
 }
 
 .btn {
-  margin: 3rem auto;
+  margin: 0 auto;
+  margin-top: 4rem;
   width: 15rem;
   background-color: var(--main-blue);
   padding: var(--padding-button);
@@ -41,6 +43,7 @@
   font-weight: var(--semi-bold);
   outline: none;
   border: 1px solid transparent;
+  border-radius: 4px;
   cursor: pointer;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out,
     border-color 0.2s ease-in-out;
