--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -42,17 +42,30 @@
   font-weight: var(--light-weight);
 }
 
+.total-price-container {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.total-text-label,
+.total-price-text {
+  font-size: 2.5rem;
+}
+
 @keyframes cartAnimation {
   0% {
-    opacity: 0;
+    /* opacity: 0; */
     transform: translateY(-3rem);
   }
 
-  50% {
-    opacity: 0.6;
+  70% {
+    /* transform: translateY(1.6rem); */
   }
 
   100% {
-    opacity: 1;
+    /* opacity: 1; */
+    transform: translateY(0);
   }
 }
