--- a/src/components/CategoryItem/CategoryItem.module.css
+++ b/src/components/CategoryItem/CategoryItem.module.css
@@ -4,7 +4,6 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  /* padding: var(--padding-content); */
   padding-bottom: 0;
   max-width: 50rem;
   text-align: center;
@@ -26,9 +25,8 @@
 }
 
 .category-image {
-  max-width: 45rem;
-  max-height: 45rem;
-  object-fit: contain;
+  max-width: 100%;
+  max-height: 100%;
   transition: transform 0.6s ease-out;
 }
 
@@ -53,4 +51,10 @@
 .category-item:hover .title {
   color: transparent;
   text-shadow: none;
+}
+
+@media (max-width: 550px) {
+  .title {
+    font-size: 4.3rem;
+  }
 }
