--- a/src/pages/ProductDetail/ProductDetail.module.css
+++ b/src/pages/ProductDetail/ProductDetail.module.css
@@ -38,5 +38,17 @@
 
   .product-title {
     text-align: center;
+    font-size: 4.8rem;
+  }
+}
+
+@media (max-width: 500px) {
+  .product-title {
+    font-size: 3.8rem;
+  }
+
+  .product-price {
+    margin-top: 2rem;
+    font-size: 3.5rem;
   }
 }
