--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -10,6 +10,7 @@
   background-color: var(--main-blue);
   color: var(--white);
   box-shadow: 1px 3px 10px rgba(0, 0, 0, 0.3);
+  z-index: 50;
 }
 
 .brand-title {
