Add visual cue item will be deleted when quantity will decrease from 1
Add trash can icon to replace '-' when quantity is 1 as the next decrease will remove the item from the cart.

--- a/src/components/Cart/CartItem/CartItem.module.css
+++ b/src/components/Cart/CartItem/CartItem.module.css
@@ -34,13 +34,17 @@
 }
 
 .btn {
+  min-width: 3rem;
   font-size: 2rem;
   outline: none;
   border: none;
   background-color: var(--main-blue);
   border-radius: 4px;
-  padding: 0.1rem 1rem;
+  padding: 0.1rem 0.5rem;
   color: var(--white);
-  min-width: 3rem;
   cursor: pointer;
+}
+
+.trash-icon {
+  font-size: 1.5rem;
 }
