implement stripe checkout...
Add CheckoutButton component to trigger checkout flow through stripe.

Update store reducer to initialize state back to default when a successful payment is processed. Dispatch action and transfer user to main store page after successful payment.

Add stripe logo to image assets. Add react-stripe-checkout to dependencies.

--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -79,6 +79,24 @@
   text-transform: uppercase;
 }
 
+.payment-btn-logo-container {
+  margin-top: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.stripe-logo {
+  max-width: 6rem;
+}
+
+.payments-message {
+  margin-top: 2rem;
+  color: var(--main-blue);
+  text-align: center;
+}
+
 @keyframes cartAnimation {
   0% {
     /* opacity: 0; */
